RAIN-4756 : Citizen Enagagement View Download alignment issue fixed

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/components/topbar.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/components/topbar.scss
@@ -95,6 +95,8 @@
 
 .cp {
   cursor: pointer;
+  display: flex;
+  align-items: end;
 }
 .citizen {
   .right {
